<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:fontFamily="casual"
                android:text="@string/main_title"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_main_start_game"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginTop="36dp"
                android:text="@string/main_start_game"
                android:textSize="16sp"
                app:backgroundTint="#8BC34A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_main_title" />

            <Button
                android:id="@+id/button_main_game_rules"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/main_game_rules"
                android:textSize="14sp"
                app:backgroundTint="#03A9F4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_main_start_game" />

            <Button
                android:id="@+id/button_main_high_scores"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/main_high_scores"
                android:textSize="14sp"
                app:backgroundTint="#FF9800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_main_game_rules" />

            <TextView
                android:id="@+id/tv_main_previousScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="casual"
                android:text="@string/main_previous_score"
                android:textColor="@color/purple_200"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_main_high_scores" />

            <TextView
                android:id="@+id/tv_previousScore_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="casual"
                android:textColor="@color/purple_200"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_main_previousScore"
                app:layout_constraintStart_toEndOf="@+id/tv_main_previousScore"
                app:layout_constraintTop_toTopOf="@+id/tv_main_previousScore"
                tools:text="0" />

            <TextView
                android:id="@+id/tv_main_privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/main_privacy_policy"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_main_previousScore" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>