<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameRules">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_game_rules_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="casual"
                android:text="@string/game_rules_title"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_game_rules_first_line"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/game_rules_first_line"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_game_rules_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_game_rules_first_line">

                <ImageView
                    android:id="@+id/iv_game_rules_elephant"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/elephant"
                    tools:src="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/iv_game_rules_mouse"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_game_rules_elephant"
                    app:srcCompat="@drawable/mouse"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_game_rules_elephant"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="24dp"
                    android:gravity="center"
                    android:text="@string/game_rules_elephant"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toEndOf="@+id/iv_game_rules_elephant"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_game_rules_mouse"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="24dp"
                    android:gravity="center"
                    android:text="@string/game_rules_mouse"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toEndOf="@+id/iv_game_rules_mouse"
                    app:layout_constraintTop_toTopOf="@+id/iv_game_rules_mouse" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_game_rules_more_lines"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="128dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="128dp"
                android:text="@string/game_rules_more_lines"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

            <TextView
                android:id="@+id/tv_game_rules_final_line"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="128dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="128dp"
                android:text="@string/game_rules_final_line"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_game_rules_more_lines" />

            <Button
                android:id="@+id/button_game_rules_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/button_back"
                app:backgroundTint="#03A9F4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_game_rules_final_line" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>