<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScores">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_high_scores_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="casual"
                android:text="@string/high_scores_title"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton_clear_high_scores"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:background="#00FFFFFF"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/tv_high_scores_title"
                app:layout_constraintStart_toEndOf="@+id/tv_high_scores_title"
                app:layout_constraintTop_toTopOf="@+id/tv_high_scores_title"
                app:srcCompat="@drawable/trash"
                app:tint="#FA0505" />

            <TextView
                android:id="@+id/tv_high_scores_first_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:text="@string/high_scores_first_line"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_high_scores_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_high_scores_first_line">

                <TextView
                    android:id="@+id/tv_table_nr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_scores_table_nr"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_table_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/high_scores_table_name"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tv_table_nr"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_table_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="88dp"
                    android:text="@string/high_scores_table_score"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tv_table_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_table_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/high_scores_table_date"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tv_table_score"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_high_scores_nr"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/tv_table_nr"
                    app:layout_constraintTop_toBottomOf="@+id/tv_table_nr"></LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_high_scores_names"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/tv_table_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_table_name"></LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_high_scores_scores"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/tv_table_score"
                    app:layout_constraintTop_toBottomOf="@+id/tv_table_score"></LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_high_scores_dates"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/tv_table_date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_table_date"></LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_high_scores_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/button_back"
                app:backgroundTint="#FF9800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>